--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "compression": "^1.8.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "inversify": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
